PA_Education/TestMenifest/force-app/main/default/objects/Item__c/Item__c.object-meta.xml
<CustomObject>
    <label>품목</label>
    <nameField>
        <label>품목명</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>