PA_Education/TestMenifest/force-app/main/default/objects/Item__c/fields/BarcodeStructure__c.field-meta.xml
<CustomField>
    <fullName>BarcodeStructure__c</fullName>
    <label>바코드 체계</label>
    <length>80</length>
    <type>Text</type>
</CustomField>