PA_Education/TestMenifest/force-app/main/default/objects/Item__c/fields/CntOptimalInventory__c.field-meta.xml
<CustomField>
    <fullName>CntOptimalInventory__c</fullName>
    <label>적정재고수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>