PA_Education/TestMenifest/force-app/main/default/objects/Item__c/fields/IsCommon__c.field-meta.xml
<CustomField>
    <fullName>IsCommon__c</fullName>
    <formula>IF(AND( TEXT(Type__c)&lt;&gt;&apos;제품&apos; , ISBLANK(  ItemMaster__c  )) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>공통부품여부</label>
    <type>Checkbox</type>
</CustomField>