PA_Education/TestMenifest/force-app/main/default/objects/Item__c/fields/ItemMaster__c.field-meta.xml
<CustomField>
    <fullName>ItemMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>생산제품</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>부품</relationshipLabel>
    <relationshipName>ItemPart</relationshipName>
    <type>Lookup</type>
</CustomField>