PA_Education/TestMenifest/force-app/main/default/objects/Item__c/fields/Prescription__c.field-meta.xml
<CustomField>
    <fullName>Prescription__c</fullName>
    <inlineHelpText>시효기간이 있는 경우에만 숫자를 입력하세요</inlineHelpText>
    <label>시효기간(제조일로부터 개월수)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>