PA_Education/TestMenifest/force-app/main/default/objects/Item__c/fields/ProductBarcode__c.field-meta.xml
<CustomField>
    <fullName>ProductBarcode__c</fullName>
    <externalId>true</externalId>
    <label>제품바코드체계</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>