PA_Education/TestMenifest/force-app/main/default/objects/Item__c/fields/ProductItem__c.field-meta.xml
<CustomField>
    <fullName>ProductItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tray, Box일경우 포함되어 있는 제품</description>
    <inlineHelpText>Tray, Box일경우 포함되어 있는 제품</inlineHelpText>
    <label>제품품목</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>품목</relationshipLabel>
    <relationshipName>PackageItem</relationshipName>
    <type>Lookup</type>
</CustomField>