PA_Education/TestMenifest/force-app/main/default/objects/Item__c/fields/ProductMasterCode2__c.field-meta.xml
<CustomField>
    <fullName>ProductMasterCode2__c</fullName>
    <label>ProductMasterCode2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>