PA_Education/TestMenifest/force-app/main/default/objects/Item__c/fields/ProductMasterCode3__c.field-meta.xml
<CustomField>
    <fullName>ProductMasterCode3__c</fullName>
    <label>ProductMasterCode3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>