PA_Education/TestMenifest/force-app/main/default/objects/Item__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <label>규격</label>
    <type>TextArea</type>
</CustomField>