PA_Education/TestMenifest/force-app/main/default/objects/Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>품목구분</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>제품</fullName>
                <default>true</default>
                <label>제품</label>
            </value>
            <value>
                <fullName>PBA</fullName>
            </value>
            <value>
                <fullName>재공품</fullName>
            </value>
            <value>
                <fullName>부품</fullName>
            </value>
            <value>
                <fullName>Tray</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>