PA_Education/TestMenifest/force-app/main/default/objects/Item__c/fields/xxxTraceabilityId__c.field-meta.xml
<CustomField>
    <fullName>xxxTraceabilityId__c</fullName>
    <externalId>true</externalId>
    <label>xxxTraceabilityId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>