PA_Education/TestMenifest/force-app/main/default/objects/Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Prescription__c</columns>
    <columns>Standard__c</columns>
    <columns>Code__c</columns>
    <columns>Type__c</columns>
    <columns>ItemMaster__c</columns>
    <columns>IsCommon__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
    <language>ko</language>
</ListView>