PA_Education/TestMenifest/force-app/main/default/objects/Item__c/listViews/Filter_Product.listView-meta.xml
<ListView>
    <fullName>Filter_Product</fullName>
    <columns>CREATED_DATE</columns>
    <columns>ProductBarcode__c</columns>
    <columns>NAME</columns>
    <columns>ProductMasterCode3__c</columns>
    <columns>ProductMasterCode2__c</columns>
    <columns>Standard__c</columns>
    <columns>Code__c</columns>
    <columns>Type__c</columns>
    <columns>ItemMaster__c</columns>
    <columns>IsCommon__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>제품</value>
    </filters>
    <label>Filter_제품</label>
    <language>ko</language>
</ListView>