PA_Education/TestMenifest/force-app/main/default/objects/Item__c/listViews/Filter_Progress.listView-meta.xml
<ListView>
    <fullName>Filter_Progress</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Standard__c</columns>
    <columns>Code__c</columns>
    <columns>Type__c</columns>
    <columns>ItemMaster__c</columns>
    <columns>IsCommon__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>재공품</value>
    </filters>
    <label>Filter_재공품</label>
    <language>ko</language>
</ListView>