PA_Education/TestMenifest/force-app/main/default/objects/Item__c/listViews/Search.listView-meta.xml
<ListView>
    <fullName>Search</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Standard__c</columns>
    <columns>Code__c</columns>
    <columns>Type__c</columns>
    <columns>ItemMaster__c</columns>
    <columns>IsCommon__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>P.C.B Assy</value>
    </filters>
    <label>검색</label>
    <language>ko</language>
</ListView>