PA_Education/TestMenifest/force-app/main/default/objects/Item__c/listViews/Search_Code.listView-meta.xml
<ListView>
    <fullName>Search_Code</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Standard__c</columns>
    <columns>Code__c</columns>
    <columns>Type__c</columns>
    <columns>ItemMaster__c</columns>
    <columns>IsCommon__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code__c</field>
        <operation>contains</operation>
        <value>MA110130</value>
    </filters>
    <label>검색_품목코드</label>
    <language>ko</language>
</ListView>